# selflearn-fast-api

./: README.md  docker-compose.yaml  pyproject.toml  server.py
scripts/: format.sh
src/: app.py  database.py
src/features/todo/: models.py  router.py  schema.py  service.py
